--- a/public/index.html
+++ b/public/index.html
@@ -97,9 +97,8 @@
 				<div class="wow bounceInUp" data-wow-delay="0.2s">
                 <div class="team boxed-grey">
                     <div class="inner">
-						<h5>Anna Hanaceck</h5>
-                        <p class="subtitle">Pixel Crafter</p>
-                        <div class="avatar"><img src="img/team/1.jpg" alt="" class="img-responsive img-circle" /></div>
+						<h5>Rutul Amin</h5>
+                        <p class="subtitle">Full Stack Developer</p>
                     </div>
                 </div>
 				</div>
@@ -108,11 +107,9 @@
 				<div class="wow bounceInUp" data-wow-delay="0.5s">
                 <div class="team boxed-grey">
                     <div class="inner">
-						<h5>Maura Daniels</h5>
-                        <p class="subtitle">Ruby on Rails</p>
-                        <div class="avatar"><img src="img/team/2.jpg" alt="" class="img-responsive img-circle" /></div>
-
-                    </div>
+						<h5>Akrati Mohta</h5>
+                        <p class="subtitle">Android Developer</p>
+                   </div>
                 </div>
 				</div>
             </div>
@@ -120,10 +117,8 @@
 				<div class="wow bounceInUp" data-wow-delay="0.8s">
                 <div class="team boxed-grey">
                     <div class="inner">
-						<h5>Jack Briane</h5>
-                        <p class="subtitle">jQuery Ninja</p>
-                        <div class="avatar"><img src="img/team/3.jpg" alt="" class="img-responsive img-circle" /></div>
-
+						<h5>Pratyusha Movva</h5>
+                        <p class="subtitle">Android Developer</p>
                     </div>
                 </div>
 				</div>
@@ -132,10 +127,8 @@
 				<div class="wow bounceInUp" data-wow-delay="1s">
                 <div class="team boxed-grey">
                     <div class="inner">
-						<h5>Tom Petterson</h5>
-                        <p class="subtitle">Typographer</p>
-                        <div class="avatar"><img src="img/team/4.jpg" alt="" class="img-responsive img-circle" /></div>
-
+						<h5>Karthik Kolichelimi</h5>
+                        <p class="subtitle">Tester</p>
                     </div>
                 </div>
 				</div>
@@ -178,8 +171,7 @@
 						<img src="img/icons/service-icon-1.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Print</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+						<h5>Automate your Cloud monitoring</h5>
 					</div>
                 </div>
 				</div>
@@ -191,8 +183,7 @@
 						<img src="img/icons/service-icon-2.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Web Design</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+						<h5>Real time alerting when your service environment needs attention</h5>
 					</div>
                 </div>
 				</div>
@@ -204,9 +195,8 @@
 						<img src="img/icons/service-icon-3.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Photography</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
-					</div>
+						<h5>Visualize your services through our highly interactive Dashboard</h5>
+						</div>
                 </div>
 				</div>
             </div>
@@ -217,9 +207,8 @@
 						<img src="img/icons/service-icon-4.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Cloud System</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
-					</div>
+						<h5>We Save $ and Extend your possibilities</h5>
+						</div>
                 </div>
 				</div>
             </div>
@@ -307,15 +296,14 @@
 				<h5>Main Office</h5>
 				
 				<address>
-				  <strong>Squas Design, Inc.</strong><br>
-				  Tower 795 Folsom Ave, Beautiful Suite 600<br>
-				  San Francisco, CA 94107<br>
+				  <strong>One Washington Square</strong><br>
+                  San Jose, California-95126<br>
 				  <abbr title="Phone">P:</abbr> (123) 456-7890
 				</address>
 
 				<address>
 				  <strong>Email</strong><br>
-				  <a href="mailto:#">email.name@example.com</a>
+				  <a href="mailto:#">rutul591@gmail.com</a>
 				</address>	
 				<address>
 				  <strong>We're on social networks</strong><br>
