--- a/public/index.html
+++ b/public/index.html
@@ -352,7 +352,7 @@
                                             <span class="input-group-addon">
                                                     <i class="glyphicon glyphicon-user"></i>
                                             </span> 
-                                            <input class="form-control" placeholder="Username" name="username" type="text" autofocus>
+                                            <input class="form-control" placeholder="Username" name="loginname" id="loginame" type="text" autofocus>
                                     </div>
                             </div>
                             <div class="form-group">
@@ -360,7 +360,7 @@
                                             <span class="input-group-addon">
                                                     <i class="glyphicon glyphicon-lock"></i>
                                             </span>
-                                            <input class="form-control" placeholder="Password"  name="password" type="password" value="">
+                                            <input class="form-control" placeholder="Password"  name="password" id="password" type="password" value="">
                                     </div>
                             </div>
                             <div class="form-group">
