--- a/public/home.html
+++ b/public/home.html
@@ -114,7 +114,7 @@
               </a>
             </li>
             <li class="treeview">
-              <a href="ticket.html">
+              <a href="/ticket">
                 <i class="fa fa-edit"></i> <span>View All Tickets</span>
                 </a>
             </li>
