added few more htmls

--- a/public/dash2.html
+++ b/public/dash2.html
@@ -57,9 +57,9 @@
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
           <!-- Sidebar toggle button-->
-         <!--  <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+          <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
             <span class="sr-only">Toggle navigation</span>
-          </a> -->
+          </a>
           <div class="navbar-custom-menu">
             <ul>
               <li><a href="/logout" class="btn btn-default">Sign out</a></li>
@@ -92,7 +92,7 @@
           <!-- Sidebar user panel -->
           <div class="user-panel">
             <div class="pull-left info">
-              <p>Rutul Amin</p>
+              <p>{{userName}}</p>
               </div>
           </div>
           <!-- sidebar menu: : style can be found in sidebar.less -->
@@ -102,11 +102,6 @@
                 <i class="fa fa-dashboard"></i> <span>Home</span></i>
               </a>  
             </li>
-            <li class="active treeview">
-              <a href="#">
-                  <i class="fa fa-dashboard"></i><span>Dashboard</span></i>
-              </a>
-              </li>    
             <li class="treeview">
               <a href="/instances">
                 <i class="fa fa-bar-chart-o"></i>
@@ -119,7 +114,7 @@
               </a>
             </li>
             <li class="treeview">
-              <a href="/tickets">
+              <a href="/ticket">
                 <i class="fa fa-edit"></i> <span>View All Tickets</span>
                 </a>
             </li>
@@ -133,6 +128,96 @@
       </aside>
 
 
+
+      <div class = "home-container">
+        <div class="content-inner">
+          <div class="container">
+            <table style="width:100%">
+              <tr>
+                <td><div id="chart_div1"></div></td>
+                <td><div id="chart_div2"></div></td> 
+                <td><div id="chart_div3"></div></td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
+      <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+      <script src="js/jquery.js"></script>
+      <script type="text/javascript">
+            google.load("visualization", "1", {packages:["gauge"]});
+            google.setOnLoadCallback(drawChart);
+            function drawChart(stats) {
+
+              if (!stats) {
+                var data = google.visualization.arrayToDataTable([
+                  ['Label', 'Value'],
+                  ['Memory', 80],
+                  ['Cpu Free', 55],
+                  ['Cpu Usage', 68]
+                ]);
+              }
+
+              if (stats) {
+                var dataMemory = google.visualization.arrayToDataTable([
+                  ['Label', 'Value'],
+                  ['Free Memory', Math.round(stats.freeMem * 100)]
+                ]);
+                var dataCpuUsage = google.visualization.arrayToDataTable([
+                  ['Label', 'Value'],
+                  ['Cpu Usage', Math.round(stats.cpuUsage * 100)]
+                ]);
+                var dataCpuFree = google.visualization.arrayToDataTable([
+                  ['Label', 'Value'],
+                  ['Cpu Free', Math.round(stats.cpuFree * 100)] 
+                ]);
+              }
+
+              var optionsMemory = {
+                width: 800, height: 400,
+                redFrom: 0, redTo: 10,
+                yellowFrom:10, yellowTo: 30,
+                minorTicks: 5
+              };
+
+              var optionsCpuUsage = {
+                width: 800, height: 400,
+                redFrom: 90, redTo: 100,
+                yellowFrom: 70, yellowTo: 90,
+                minorTicks: 5
+              };
+
+              var optionsCpuFree = {
+                width: 800, height: 400,
+                redFrom: 0, redTo: 10,
+                yellowFrom: 10, yellowTo: 30,
+                minorTicks: 5
+              };
+
+              var chart1 = new google.visualization.Gauge(document.getElementById('chart_div1'));
+              var chart2 = new google.visualization.Gauge(document.getElementById('chart_div2'));
+              //var chart3 = new google.visualization.Gauge(document.getElementById('chart_div3'));
+
+              chart1.draw(dataMemory, optionsMemory);
+              chart2.draw(dataCpuUsage, optionsCpuUsage);
+              //chart3.draw(dataCpuFree, optionsCpuFree);
+            }
+        
+        setInterval(function() {
+          $.ajax({
+            url: '/cpu.json',
+            method: 'GET',
+            cache: false,
+            dataType: 'json',
+            success: function(data) {
+              drawChart(data);
+            },
+            error: function() {
+              $('#result').html('<div class="alert alert-danger" role="alert">Could not load statistics.</div>');
+            }
+          });
+        }, 3000);     
+      </script>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js" type="text/javascript"></script>
