--- a/public/errors.html
+++ b/public/errors.html
@@ -190,7 +190,7 @@
             $($cells[0]).text(err.list[0]);
             $($cells[1]).text('realy-yelp-server');
             $($cells[2]).text(err.list[1]);
-            $($cells[2]).popover({trigger: 'hover', title: 'Full Logs', 'content': err.err, 'container': 'body', placement: 'auto bottom'});
+            $($cells[2]).popover({trigger: 'hover', title: 'Full Logs', 'content': err.err, container: 'body', placement: 'auto bottom'});
           });
           
         },
