--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
                 <div class="team boxed-grey">
                     <div class="inner">
 						<h5>Karthik Kolichelimi</h5>
-                        <p class="subtitle">Tester</p>
+                        <p class="subtitle">Software Tester</p>
                     </div>
                 </div>
 				</div>
@@ -283,7 +283,7 @@
                         </div>
                     </div>
                     <div class="col-md-12">
-                        <button type="submit" class="btn btn-skin pull-right" id="btnContactUs">
+                        <button type="submit" href="/email"class="btn btn-skin pull-right" id="btnContactUs">
                             Send Message</button>
                     </div>
                 </div>
@@ -451,7 +451,7 @@
 						</a>
 					</div>
 					</div>
-					<p>&copy;Copyright 2014 - Squad. All rights reserved.</p>
+					<p>&copy;Copyright 2014. All rights reserved.</p>
 				</div>
 			</div>	
 		</div>
