--- a/public/ticket.html
+++ b/public/ticket.html
@@ -53,27 +53,21 @@
       <!-- header logo: style can be found in header.less -->
       <header class="main-header">
         <!-- Logo -->
-        <a href="#" class="logo">CLOUDY</a>
+        <a href="index2.html" class="logo">CLOUDY</a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
           <!-- Sidebar toggle button-->
           <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
             <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
           </a>
           <div class="navbar-custom-menu">
-            <ul>
-              <li><a href="/logout" class="btn btn-default">Sign out</a></li>
-            </ul>
             <!-- anything that needs addition to the navigation menu goes here-->
           </div>
         </nav>
       </header>
       <!-- Left side column. contains the logo and sidebar -->
-
-     <!--  <div class="profile">
+<!-- 
+      <div class="profile">
  <h2>Generate Ticket</h2>
       <label for="TicketName">TicketName:</label>
       <input type="text" class="form-control" id="ticketName" placeholder="Ticket Name"><br>
@@ -87,17 +81,18 @@
        <input type="email" class="form-control" id="created_by" placeholder="email"><br><br>
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
-</div>
-      -->
+</div> -->
+     
       <aside class="main-sidebar">
         <!-- sidebar: style can be found in sidebar.less -->
         <section class="sidebar">
           <!-- Sidebar user panel -->
           <div class="user-panel">
             <div class="pull-left info">
-              <p>Rutul Amin</p>
+              <p>{{user.firstname}}</p>
               </div>
           </div>
+          <!-- search form -->
           <form action="#" method="get" class="sidebar-form">
             <div class="input-group">
               <input type="text" name="q" class="form-control" placeholder="Search..."/>
@@ -106,6 +101,7 @@
               </span>
             </div>
           </form>
+          <!-- /.search form -->
           <!-- sidebar menu: : style can be found in sidebar.less -->
           <ul class="sidebar-menu">
             <li class="active treeview">
@@ -113,43 +109,28 @@
                 <i class="fa fa-dashboard"></i> <span>Home</span></i>
               </a>  
             </li>
-            <li class=" treeview">
-              <a href="#">
-                  <i class="fa fa-dashboard"></i><span>Dashboard</span></i>
-              </a>
-              </li>    
             <li class="treeview">
-              <a href="/instances">
+              <a href="pages/instance.html">
                 <i class="fa fa-bar-chart-o"></i>
                 <span>View All Instances</span>
               </a>
             </li>
-            <li class="treeview">
-              <a href="/cpu">
-                <i class="fa fa-bar-chart-o"></i>
-                <span>cpu</span>
-              </a>
-            </li>
             <li>
-              <a href="/alerts">
+              <a href="pages/alerts.html">
                 <i class="fa fa-th"></i> <span>View all Alerts</span> 
               </a>
             </li>
             <li class="treeview">
-              <a href="/tickets">
+              <a href="pages/ticket.html">
                 <i class="fa fa-edit"></i> <span>View All Tickets</span>
                 </a>
             </li>
             <li class="treeview">
-            <li><a href="/logs"><i class="fa fa-book"></i> View All Logs</a></li>
-            <li class="treeview">
-              <a href='/RCA'>
-                <i class="fa fa-bar-chart-o"></i>
-                <span>RootCauseAnalysis</span>
+              <a href="pages/swat.html">
+                <i class="fa fa-table"></i> <span>View all SWAT tickets</span>              
               </a>
-            </li>
-            <li><a href="/index"><i class="fa fa-book"></i>API Reference</a></li>
-            </li>
+            <li><a href="pages/viewalllogs.html"><i class="fa fa-book"></i> View All Logs</a></li>
+            <li><a href="documentation/index.html"><i class="fa fa-book"></i> Documentation</a></li>
           </ul>
         </section>
         <!-- /.sidebar -->
@@ -191,9 +172,4 @@
     <!-- AdminLTE for demo purposes -->
     <script src="dist/js/demo.js" type="text/javascript"></script>
   </body>
-  <script type="text/javascript">
-    $("rca").on('click', function(){
-     window.location = "https://bugzilla.mozilla.org/query.cgi?resolution=---&resolution=DUPLICATE&product=Bugzilla";    
-});
-  </script>
 </html>
