fixed the routing in each page

--- a/public/dashboard1.html
+++ b/public/dashboard1.html
@@ -76,6 +76,61 @@
       <!-- Left side column. contains the logo and sidebar -->
 
     
+   <aside class="main-sidebar">
+        <!-- sidebar: style can be found in sidebar.less -->
+        <section class="sidebar">
+          <!-- Sidebar user panel -->
+          <div class="user-panel">
+            <div class="pull-left info">
+              <p>{{user.first_name}}</p>
+              </div>
+          </div>
+          <form action="#" method="get" class="sidebar-form">
+            <div class="input-group">
+              <input type="text" name="q" class="form-control" placeholder="Search..."/>
+              <span class="input-group-btn">
+                <button type='submit' name='search' id='search-btn' class="btn btn-flat"><i class="fa fa-search"></i></button>
+              </span>
+            </div>
+          </form>
+          <!-- sidebar menu: : style can be found in sidebar.less -->
+          <ul class="sidebar-menu">
+            <li class="treeview">
+              <a href="#">
+                <i class="fa fa-dashboard"></i> <span>Home</span></i>
+              </a>  
+            </li>
+            <li class="treeview">
+              <a>
+                  <i class="fa fa-dashboard"></i><span>Dashboard</span></i>
+                   <ul class="treeview-menu">
+                      <li><a href="/dash1"><i class="fa fa-angle-double-right"></i>Main server</a></li>
+                      <li><a href="/dash"><i class="fa fa-angle-double-right"></i>Database Server</a></li>
+                   </ul>
+              </a>
+              </li>    
+            <li class="treeview">
+              <a href="/tickets">
+                <i class="fa fa-edit"></i> <span>View All Tickets</span>
+                </a>
+            </li>
+            <li class="treeview">
+            <li><a href="/logs"><i class="fa fa-book"></i> View All Logs</a></li>
+            <li class="treeview">
+              <a href='/RCA'>
+                <i class="fa fa-bar-chart-o"></i>
+                <span>RootCauseAnalysis</span>
+              </a>
+            </li>
+            <li><a href="/API"><i class="fa fa-book"></i>API Reference</a></li>
+             <li><a href="/edit"><i class="fa fa-book"></i>Edit account settings</a></li>
+            </li>
+          </ul>
+        </section>
+        <!-- /.sidebar -->
+      </aside>
+
+
       <div class = "profile">
           <div class="container" id="container" >
        <!--      <table style="width:100%">
@@ -85,60 +140,17 @@
             </table> -->
 
 
-            <iframe src="https://rpm.newrelic.com/public/charts/L8h0vAMt55" width="500" height="280" scrolling="no" frameborder="no"></iframe>
+            <iframe src="https://rpm.newrelic.com/public/charts/8mcAPWNXNuS" width="500" height="300" scrolling="no" frameborder="no"></iframe>
 
-            <iframe src="https://rpm.newrelic.com/public/charts/dT78ttB8Fkq" width="500" height="280" scrolling="no" frameborder="no"></iframe>
-
-            <iframe src="https://rpm.newrelic.com/public/charts/g6BC9HkbSh6" width="500" height="280" scrolling="no" frameborder="no"></iframe>
+            <iframe src="https://rpm.newrelic.com/public/charts/hn5sA69E6Lo" width="500" height="300" scrolling="no" frameborder="no"></iframe>
 
             <iframe src="https://rpm.newrelic.com/public/charts/i4CML8l3YEZ" width="500" height="280" scrolling="no" frameborder="no"></iframe>
 
+            <iframe src="https://rpm.newrelic.com/public/charts/bjMNMfgbx6G" width="500" height="300" scrolling="no" frameborder="no"></iframe>
 
       <script src="js/jquery.js"></script>
     </div>
 </div>
-     
-      <aside class="main-sidebar">
-        <!-- sidebar: style can be found in sidebar.less
-        <section class="sidebar">
-          <!-- Sidebar user panel -->
-          <div class="user-panel">
-            <div class="pull-left info">
-              <p>Rutul Amin</p>
-              </div>
-          </div>
-          <!-- sidebar menu: : style can be found in sidebar.less -->
-          <ul class="sidebar-menu">
-            <li class="active treeview">
-              <a href="#">
-                <i class="fa fa-dashboard"></i> <span>Home</span></i>
-              </a>  
-            </li>
-            <li class="treeview">
-              <a href="/instances">
-                <i class="fa fa-bar-chart-o"></i>
-                <span>View All Instances</span>
-              </a>
-            </li>
-            <li>
-              <a href="/alerts">
-                <i class="fa fa-th"></i> <span>View all Alerts</span> 
-              </a>
-            </li>
-            <li class="treeview">
-              <a href="/ticket">
-                <i class="fa fa-edit"></i> <span>View All Tickets</span>
-                </a>
-            </li>
-            <li class="treeview">
-            <li><a href="/logs"><i class="fa fa-book"></i> View All Logs</a></li>
-            <li><a href="/index"><i class="fa fa-book"></i> Documentation</a></li>
-            </li>
-          </ul>
-        </section>
-        <!-- /.sidebar -->
-      </aside> -->
-
 
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
