--- a/public/dashboard1.html
+++ b/public/dashboard1.html
@@ -8,7 +8,7 @@
     width : 430px;
     height: 300px;
     left : 18%;
-    top : 20%;
+    top : 7%;
     right :20%;
     background-color: white;
     z-index: 99;
@@ -96,7 +96,7 @@
           <!-- sidebar menu: : style can be found in sidebar.less -->
           <ul class="sidebar-menu">
             <li class="treeview">
-              <a href="#">
+              <a href="/home">
                 <i class="fa fa-dashboard"></i> <span>Home</span></i>
               </a>  
             </li>
@@ -124,6 +124,7 @@
             </li>
             <li><a href="/API"><i class="fa fa-book"></i>API Reference</a></li>
              <li><a href="/edit"><i class="fa fa-book"></i>Edit account settings</a></li>
+
             </li>
           </ul>
         </section>
@@ -133,6 +134,7 @@
 
       <div class = "profile">
           <div class="container" id="container" >
+            <h2>Database Statistics</h2>
        <!--      <table style="width:100%">
               <tr>
                 <td><div id="container"></div></td>
@@ -140,13 +142,13 @@
             </table> -->
 
 
-            <iframe src="https://rpm.newrelic.com/public/charts/8mcAPWNXNuS" width="500" height="300" scrolling="no" frameborder="no"></iframe>
+            <iframe src="https://rpm.newrelic.com/public/charts/8mcAPWNXNuS" width="500" height="280" scrolling="no" frameborder="no"></iframe>
 
-            <iframe src="https://rpm.newrelic.com/public/charts/hn5sA69E6Lo" width="500" height="300" scrolling="no" frameborder="no"></iframe>
+            <iframe src="https://rpm.newrelic.com/public/charts/hn5sA69E6Lo" width="500" height="280" scrolling="no" frameborder="no"></iframe>
 
             <iframe src="https://rpm.newrelic.com/public/charts/i4CML8l3YEZ" width="500" height="280" scrolling="no" frameborder="no"></iframe>
 
-            <iframe src="https://rpm.newrelic.com/public/charts/bjMNMfgbx6G" width="500" height="300" scrolling="no" frameborder="no"></iframe>
+            <iframe src="https://rpm.newrelic.com/public/charts/bjMNMfgbx6G" width="500" height="280" scrolling="no" frameborder="no"></iframe>
 
       <script src="js/jquery.js"></script>
     </div>
