--- a/public/dashboard2.html
+++ b/public/dashboard2.html
@@ -110,7 +110,7 @@
           <!-- sidebar menu: : style can be found in sidebar.less -->
           <ul class="sidebar-menu">
             <li class="treeview">
-              <a href="#">
+              <a href="/home">
                 <i class="fa fa-dashboard"></i> <span>Home</span></i>
               </a>  
             </li>
