--- a/public/home.html
+++ b/public/home.html
@@ -65,7 +65,7 @@
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+            <span class="icon-bar"></spaan>
           </a>
           <div class="navbar-custom-menu">
             <ul>
@@ -140,7 +140,6 @@
               </a>
             </li>
             <li><a href="/API"><i class="fa fa-book"></i>API Reference</a></li>
-             <li><a href="/Errorpage.html"><i class="fa fa-book"></i>Edit account settings</a></li>
             </li>
           </ul>
         </section>
