--- a/public/api.html
+++ b/public/api.html
@@ -105,6 +105,7 @@
                    <ul class="treeview-menu">
                       <li><a href="/dash1"><i class="fa fa-angle-double-right"></i>Main server</a></li>
                       <li><a href="/dash"><i class="fa fa-angle-double-right"></i>Database Server</a></li>
+                      <li><a href="/cpu"><i class="fa fa-angle-double-right"></i>Cpu Utilization</a></li>
                    </ul>
               </a>
               </li>    
