--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,17 @@
     <link href="css/style.css" rel="stylesheet">
 	<link href="color/default.css" rel="stylesheet">
 
+    <script src="https://cdn.localizejs.com/localize.js"></script>
+<script>!function(a){if(!a.Localize){a.Localize={};for(var e=["translate","untranslate","phrase","initialize","translatePage","setLanguage","getLanguage","detectLanguage","getAvailableLanguages","untranslatePage","bootstrap","prefetch","on","off"],t=0;t<e.length;t++)a.Localize[e[t]]=function(){}}}(window);</script>
+
+<script>
+  Localize.initialize({
+    key: 'nbvjnXYyUeluB', 
+    rememberLanguage: true
+  });
+</script>
+
+
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
@@ -128,7 +139,7 @@
                 <div class="team boxed-grey">
                     <div class="inner">
 						<h5>Karthik Kolichelimi</h5>
-                        <p class="subtitle">Software Tester</p>
+                        <p class="subtitle">Software QA Engineer</p>
                     </div>
                 </div>
 				</div>
