--- a/public/dashboard2.html
+++ b/public/dashboard2.html
@@ -120,6 +120,7 @@
                    <ul class="treeview-menu">
                       <li><a href="/dash1"><i class="fa fa-angle-double-right"></i>Main server</a></li>
                       <li><a href="/dash"><i class="fa fa-angle-double-right"></i>Database Server</a></li>
+                      <li><a href="/cpu"><i class="fa fa-angle-double-right"></i>Cpu Utilization</a></li>
                    </ul>
               </a>
               </li>    
@@ -161,7 +162,9 @@
               <iframe src="https://rpm.newrelic.com/public/charts/3GcBvwmS6b7" width="500" height="280" scrolling="no" frameborder="no"></iframe>
 
             </div>
-        </div>    
+          </div>
+      <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+      <script src="js/jquery.js"></script> 
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js" type="text/javascript"></script>
