--- a/public/ticket.html
+++ b/public/ticket.html
@@ -75,22 +75,6 @@
         </nav>
       </header>
       <!-- Left side column. contains the logo and sidebar -->
-<!-- 
-      <div class="profile">
- <h2>Generate Ticket</h2>
-      <label for="TicketName">TicketName:</label>
-      <input type="text" class="form-control" id="ticketName" placeholder="Ticket Name"><br>
-      <label for="pwd">TicketSeverity:</label>
-      <input type="text" class="form-control" id="ticketSeverity" placeholder="Severity"><br>
-      <label for="TicketStatus">TicketStatus:</label>
-       <input type="text" class="form-control" id="ticketStatus" placeholder="Status"><br>
-      <label for="TickerLevel">TicketLevel:</label>
-       <input type="text" class="form-control" id="ticketLevel" placeholder="Level"><br>
-      <label for="Email">UserName:</label>
-       <input type="email" class="form-control" id="created_by" placeholder="email"><br><br>
-    <button type="submit" class="btn btn-default">Submit</button>
-  </form>
-</div> -->
      
             <aside class="main-sidebar">
         <!-- sidebar: style can be found in sidebar.less -->
@@ -122,6 +106,7 @@
                    <ul class="treeview-menu">
                       <li><a href="/dash1"><i class="fa fa-angle-double-right"></i>Main server</a></li>
                       <li><a href="/dash"><i class="fa fa-angle-double-right"></i>Database Server</a></li>
+                      <li><a href="/cpu"><i class="fa fa-angle-double-right"></i>Cpu Utilization</a></li>
                    </ul>
               </a>
               </li>    
